--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Aprendiendo git</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque harum molestias rem quo aliquam sequi alias facilis assumenda pariatur nobis corporis, et corrupti quibusdam odit porro adipisci in iure aliquid?</p>
+  <ul>
+    <li>elemento1</li>
+    <li>elemento2</li>
+    <li>elemento3</li>
+    <li>elemento4</li>
+    <li>elemento5</li>
+    <li>elemento6</li>
+    <li>elemento7</li>
+    <li>elemento8</li>
+    <li>elemento9</li>
+    <li>elemento10</li>
+  </ul>
 </body>
 </html>
