agregando scrip js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <ol>
+    <li>elemento1</li>
+    <li>elemento2</li>
+    <li>elemento3</li>
+    <li>elemento4</li>
+    <li>elemento5</li>
+  </ol>
+  <script src="index.js"></script>
 </body>
 </html>
