--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <li>elemento9</li>
       <li>elemento10</li>
     </ol>
+    <ul>
+      <li>Primavera - 21 marzo</li>
+      <li>Verano 21 junio</li>
+      <li>Otono 21 septiembre</li>
+      <li>Invierno 21 diciembre</li>
+    </ul>
     <script src="index.js"></script>
     >>>>>>> html
   </body>
