agregando las estaciones del ano

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <li>elemento9</li>
       <li>elemento10</li>
     </ol>
+    <ul>
+      <li>Primavera</li>
+      <li>Verano</li>
+      <li>Otono</li>
+      <li>Invierno</li>
+    </ul>
     <script src="index.js"></script>
     >>>>>>> html
   </body>
