agregue dos parrafos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <li>Otono</li>
       <li>Invierno</li>
     </ul>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur totam
+      itaque beatae quo assumenda, harum ducimus dignissimos atque aliquam. Rem
+      est perferendis commodi nam culpa ea qui dolorem illum. Voluptate!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dicta aut cum et blanditiis ut dolor mollitia quibusdam quisquam sunt minima nisi exercitationem, iste doloribus magni dolorum deserunt. Alias, dolor?</p>
     <script src="index.js"></script>
     >>>>>>> html
   </body>
